--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "mapbox-gl": "1",
+    "maplibre-gl": "2",
+    "mobility-toolbox-js": "2.0.0-beta.78",
+    "ol": "7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
