--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mobility-toolbox-js": "2.0.0-beta.78",
     "ol": "7.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.3",
