--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "1",
     "maplibre-gl": "2",
     "mobility-toolbox-js": "2.0.0-beta.78",
@@ -25,6 +26,7 @@
     "@heroicons/react": "^2.0.15",
     "@tailwindcss/forms": "^0.5.3",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
