--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "maplibre-gl": "2",
     "mobility-toolbox-js": "2.0.0-beta.78",
     "ol": "7.3.0",
+    "papaparse": "^5.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0"
@@ -28,6 +29,7 @@
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
+    "@types/papaparse": "^5.3.7",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
