--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "color": "^4.2.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "1",
     "maplibre-gl": "2",
