--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/config-conventional": "^17.4.3",
     "@heroicons/react": "^2.0.15",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/color": "^3.0.3",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
