--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "maplibre-gl": "2",
     "mobility-toolbox-js": "2.0.0-beta.78",
     "ol": "7.3.0",
+    "overpass-ts": "^4.3.8",
     "papaparse": "^5.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
