--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "papaparse": "^5.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.3",
