--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.0",
     "@turf/turf": "^6.5.0",
     "color": "^4.2.3",
     "lodash": "^4.17.21",
