--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@iconify/react": "^4.1.0",
     "@turf/turf": "^6.5.0",
+    "cesium": "1.97.0",
     "color": "^4.2.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "1",
     "maplibre-gl": "2",
     "mobility-toolbox-js": "2.0.0-beta.78",
     "ol": "7.3.0",
+    "olcs": "https://github.com/openlayers/ol-cesium.git",
     "overpass-ts": "^4.3.8",
     "papaparse": "^5.4.1",
     "react": "^17.0.2",
@@ -52,6 +54,7 @@
     "tailwindcss": "^3.2.6",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "vite": "^4.1.1",
+    "vite-plugin-cesium": "^1.2.22"
   }
 }
