--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
+    "resium": "^1.16.1",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
